{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 39,
  "lineage": "a8dcd267-64d4-cbe0-8fb6-73c1d2611f50",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "jungle_igw",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260236618763:internet-gateway/igw-0d4e573bd78963084",
            "id": "igw-0d4e573bd78963084",
            "owner_id": "260236618763",
            "tags": {
              "Name": "jungle-eks-igw"
            },
            "tags_all": {
              "Name": "jungle-eks-igw"
            },
            "vpc_id": "vpc-014ac1faf23707f26"
          },
          "dependencies": [
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "jungle_route_table",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260236618763:route-table/rtb-07eb221e512967d2a",
            "id": "rtb-07eb221e512967d2a",
            "owner_id": "260236618763",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d4e573bd78963084",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-014ac1faf23707f26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.jungle_igw",
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jungle_route_table_association",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f4b64cde8330a98",
            "route_table_id": "rtb-07eb221e512967d2a",
            "subnet_id": "subnet-0aeb6315f5b9303a9"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.jungle_igw",
            "module.network.aws_route_table.jungle_route_table",
            "module.network.aws_subnet.jungle_subnet",
            "module.network.aws_vpc.jungle_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068ebd9222a0cc97f",
            "route_table_id": "rtb-07eb221e512967d2a",
            "subnet_id": "subnet-0de535dff60d6bd63"
          },
          "dependencies": [
            "module.network.aws_vpc.jungle_vpc",
            "module.network.aws_internet_gateway.jungle_igw",
            "module.network.aws_route_table.jungle_route_table",
            "module.network.aws_subnet.jungle_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jungle_cluster_sg",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260236618763:security-group/sg-031fce2538a714997",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031fce2538a714997",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "jungle-cluster-sg",
            "name_prefix": "",
            "owner_id": "260236618763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jungle-eks"
            },
            "tags_all": {
              "Name": "jungle-eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-014ac1faf23707f26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "jungle_cluster_ingress",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-2538977499",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-031fce2538a714997",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.jungle_cluster_sg",
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "jungle_subnet",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260236618763:subnet/subnet-0aeb6315f5b9303a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0aeb6315f5b9303a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "260236618763",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/jungle-eks-us-east-1": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/jungle-eks-us-east-1": "shared"
            },
            "vpc_id": "vpc-014ac1faf23707f26"
          },
          "dependencies": [
            "module.network.aws_vpc.jungle_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260236618763:subnet/subnet-0de535dff60d6bd63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0de535dff60d6bd63",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "260236618763",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/jungle-eks-us-east-1": "shared"
            },
            "tags_all": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/jungle-eks-us-east-1": "shared"
            },
            "vpc_id": "vpc-014ac1faf23707f26"
          },
          "dependencies": [
            "module.network.aws_vpc.jungle_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "jungle_vpc",
      "provider": "module.network.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:260236618763:vpc/vpc-014ac1faf23707f26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0741d7750aed1d149",
            "default_route_table_id": "rtb-059030691495fd377",
            "default_security_group_id": "sg-0e3b9e444080f03b1",
            "dhcp_options_id": "dopt-a3dcf7d9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-014ac1faf23707f26",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-059030691495fd377",
            "owner_id": "260236618763",
            "tags": {
              "Name": "jungle-vpc"
            },
            "tags_all": {
              "Name": "jungle-vpc"
            }
          }
        }
      ]
    }
  ]
}